# wholesome-swolesome

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.ts  workout_plan.csv
.claude/: settings.local.json
.github/workflows/: deploy.yml
public/: manifest.json  sw.js
scripts/: test.sh
src/: app.rs  csv_utils.rs  lib.rs  main.rs  models.rs  seed.rs  storage.rs
src/components/: history.rs  home.rs  mod.rs  plan_editor.rs  progress.rs  session.rs
tests/playwright/: helpers.ts  history.spec.ts  home.spec.ts  persistence.spec.ts  plan-editor.spec.ts  session.spec.ts
