[package]
name = "wholesome-swolesome"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "HtmlAnchorElement",
    "Url",
    "Blob",
    "BlobPropertyBag",
] }
js-sys = "0.3"
uuid = { version = "1", features = ["v4", "js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
